@@ -1,7 +1,7 @@
 package com.napora.napora.service;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
@@ -14,6 +14,7 @@ import org.springframework.stereotype.Service;
 import com.napora.napora.model.Role;
 import com.napora.napora.model.User;
 import com.napora.napora.repository.UserRepository;
+import com.napora.napora.repository.RoleRepository;
 import com.napora.napora.web.dto.UserRegistrationDto;
 
 @Service
@@ -21,21 +22,29 @@ public class UserServiceImpl implements UserService {
 
     private UserRepository userRepository;
     private BCryptPasswordEncoder passwordEncoder;
+    private final RoleRepository roleRepository;
 
-    public UserServiceImpl(UserRepository userRepository, BCryptPasswordEncoder passwordEncoder) {
+    public UserServiceImpl(UserRepository userRepository, BCryptPasswordEncoder passwordEncoder, RoleRepository roleRepository) {
         super();
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
+        this.roleRepository = roleRepository;
     }
 
     @Override
     public User save(UserRegistrationDto registrationDto) {
+        Role userRole = roleRepository.findByName("user");
+        if (userRole == null) {
+            userRole = new Role("user");
+            roleRepository.save(userRole);
+        }
+
         User user = new User(
             registrationDto.getFirstName(),
             registrationDto.getLastName(),
             registrationDto.getEmail(),
             passwordEncoder.encode(registrationDto.getPassword()),
-            Arrays.asList(new Role("user"))
+            List.of(userRole)
         );
 
         return userRepository.save(user);
